# zeitgeist-lucenepp

./: .gitignore  .project  AUTHORS  COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.status  configure  configure.ac  zeitgeist-daemon  zeitgeist-daemon.pc  zeitgeist-daemon.pc.in  zeitgeist-daemon.py
_zeitgeist/: Makefile  Makefile.am  Makefile.in  singleton.py
_zeitgeist/engine/: Makefile  Makefile.am  Makefile.in  __init__.py  datamodel.py  main.py  remote.py  sql.py
_zeitgeist/engine/extensions/: Makefile  Makefile.am  Makefile.in  blacklist.py  datasource_registry.py  fts-clucene.py  fts.py
_zeitgeist/engine/upgrades/: Makefile  Makefile.am  Makefile.in
doc/: Makefile  Makefile.am  Makefile.in  zeitgeist-daemon.1
doc/zeitgeist/: Makefile
doc/zeitgeist/source/: client.rst  conf.py  datamodel.rst  dbus_api.rst  engine.rst  index.rst  make_ontology.py
extra/: Makefile  Makefile.am  Makefile.in  PythonSerializer.py  org.gnome.zeitgeist.service  org.gnome.zeitgeist.service.in  rdfxml2py
extra/ontology/: Makefile  Makefile.am  Makefile.in  zeitgeist.py  zg.py  zg.trig
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.gmo  en_AU.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  hu.gmo  hu.po  id.gmo  id.po  (+40 more)
zeitgeist/: Makefile  Makefile.am  Makefile.in  _config.py  _config.py.in  client.py  datamodel.py
